MOSIP-25202 - fix sonar reliability issues
Signed-off-by: Youssef MAHTAT <youssef.mahtat.as.developer@gmail.com>